k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tbgroup
  labels:
    name: tbgroup
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    environment: production
